2012-10-26  James Robinson  <jamesr@chromium.org>

        [chromium] Allow embedder to enter/leave force compositing mode
        https://bugs.webkit.org/show_bug.cgi?id=100458

        Reviewed by Adrienne Walker.

        This adds API for the embedder to decide when to enter and leave force compositing mode since it's
        more efficient to only toggle this setting when the embedder is about to produce a frame.

        * public/WebWidget.h:
        (WebWidget):
        (WebKit::WebWidget::enterForceCompositingMode):
        * src/WebFrameImpl.cpp:
        (WebKit::WebViewImpl::enterForceCompositingMode):
        (WebKit):
        * src/WebViewImpl.h:
        (WebViewImpl):

2012-10-26  Dominic Mazzoni  <dmazzoni@google.com>

        AX: Notification should be sent when accessibilityIsIgnored changes
        https://bugs.webkit.org/show_bug.cgi?id=99547

        Reviewed by Chris Fleizach.

        Adds new accessibility notifications.

        * public/WebAccessibilityNotification.h:
        * src/AssertMatchingEnums.cpp:

2012-10-26  Thiago Marcos P. Santos  <thiago.santos@intel.com>

        Add feature flags for CSS Device Adaptation
        https://bugs.webkit.org/show_bug.cgi?id=95960

        Reviewed by Kenneth Rohde Christiansen.

        * features.gypi:

2012-10-26  Kent Tamura  <tkent@chromium.org>

        Disable ENABLE_INPUT_TYPE_WEEK on Chromium/Android
        https://bugs.webkit.org/show_bug.cgi?id=100457

        Reviewed by Kentaro Hara.

        It was enabled accidentally. Week input is not implemented in
        Android.

        * features.gypi: Remove ENABLE_INPUT_TYPE_WEEK=1 in the common block,
        add ENABLE_INPUT_TYPE_WEEK=0 in Android block, and add
        ENABLE_INPUT_TYPE_WEEK=1 in non-Android block.

2012-10-26  Kent Tamura  <tkent@chromium.org>

        [Chromium-Win] Support shortTimeFormat
        https://bugs.webkit.org/show_bug.cgi?id=100471

        Reviewed by Kentaro Hara.

        * tests/LocaleWinTest.cpp: