@@ -1,3 +1,15 @@
+2012-10-26  Kent Tamura  <tkent@chromium.org>
+
+        [Chromium] Convert Chromium template string to an LDML date format
+        https://bugs.webkit.org/show_bug.cgi?id=100128
+
+        Reviewed by Tony Chang.
+
+        * src/LocalizedStrings.cpp:
+        (WebCore): Include WebCore/platform/text/DateTimeFormat.h.
+        (WebCore::weekFormatInLDML):
+        Replace $1 with yyyy, $2 with ww, and quote other parts.
+
 2012-10-26  James Robinson  <jamesr@chromium.org>
 
         [chromium] Allow embedder to enter/leave force compositing mode
